test/e2e/features/websocket/testdata/httproute-websocket-default-transform-buffering.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: websocket-default-transform-route
  namespace: kgateway-base
spec:
  parentRefs:
    - name: gateway
      namespace: kgateway-base
  hostnames:
    - "websocket-default-transform.example.com"
  rules:
    - backendRefs:
        - name: websocket-svc
          port: 8080
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: websocket-default-transform-tp
  namespace: kgateway-base
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: websocket-default-transform-route
  transformation:
    request:
      set:
        - name: x-foo-request
          value: "bar"
    response:
      set:
        - name: x-foo-response
          value: "bar"
