test/e2e/features/websocket/testdata/websocket-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: websocket-svc
  namespace: kgateway-base
  labels:
    app: websocket-svc
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: websocket-backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket-backend
  namespace: kgateway-base
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: websocket-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: websocket-backend
    spec:
      terminationGracePeriodSeconds: 0
      containers:
        - image: jmalloc/echo-server:v0.3.7
          imagePullPolicy: IfNotPresent
          name: websocket-backend
          ports:
            - containerPort: 8080
